# meet-note-gen

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-30-meet-note-gen-implementation.md
docs/superpowers/specs/: 2026-06-30-meet-note-gen-design.md
src/meet_note_gen/: __init__.py  __main__.py  audio.py  engines.py  gui.py  jobs.py  model_catalog.py  model_downloader.py  paths.py  recording.py  runner.py  transcription.py  zip_export.py
tests/: test_audio.py  test_engines.py  test_gui.py  test_jobs.py  test_model_catalog.py  test_model_downloader.py  test_recording.py  test_runner.py  test_smoke_pipeline.py  test_transcription.py  test_zip_export.py
