[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meet-note-gen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pyqtgraph>=0.13",
  "numpy>=1.26",
  "huggingface-hub>=0.23",
]

[project.scripts]
meet-note-gen = "meet_note_gen.__main__:main"
